# HikeVisualizer

./: .gitignore  README.md  hike_animation.py  main.py  pyproject.toml  requirements.txt
hikevisualizer/: Command Line.txt  __init__.py  __main__.py  cli.py
hikevisualizer/core/: __init__.py  data_merger.py  fit_parser.py  gpx_parser.py  hr_zones.py  media_scanner.py
hikevisualizer/generators/: __init__.py  html_generator.py  js_generator.py
hikevisualizer/models/: __init__.py  hike_data.py  media_item.py  trackpoint.py
hikevisualizer/templates/: base.html  elevation_section.html  lightbox.html  media_card.html  publish.html  timeline_section.html  vertical_timeline.html
tests/: __init__.py
