[project]
name = "hikevisualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fitparse>=1.2.0",
    "gpxpy>=1.6.0",
    "jinja2>=3.1.0",
    "pillow>=10.0.0",
    "pillow-heif>=1.2.0",
    "python-dateutil>=2.8.0",
    "pytz>=2025.2",
    "timezonefinder>=8.2.1",
]

[project.scripts]
hikevisualizer = "hikevisualizer.cli:main"
